# acmind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY.md  LICENSE  README.md  cat_budget_proposal.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  tsconfig.app.json  turbo.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.pi-lens/: index.json  metrics-history.json  turn-state.json
.pi-lens/cache/: jscpd.json  jscpd.meta.json  knip.json  knip.meta.json  review-graph.json  session-start-guidance.meta.json  todo-baseline.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
apps/api/: Cargo.toml  Dockerfile
apps/api/migration/: Cargo.toml
apps/api/migration/src/: lib.rs  m20260101_000001_create_user.rs  m20260101_000002_create_problem.rs  m20260101_000003_create_submission.rs  m20260101_000004_create_knowledge.rs  m20260101_000005_create_tag.rs  m20260101_000006_create_join_tables.rs  m20260608_142216_create_ai_analysis.rs  m20260609_090000_create_task.rs  m20260610_090000_create_template.rs  m20260610_100000_add_template_summary.rs  m20260612_120000_add_submission_run_id.rs  main.rs
apps/api/src/: config.rs  error.rs  health.rs  lib.rs  main.rs  state.rs
apps/api/src/ai/: context.rs  mod.rs  model.rs  orchestrator.rs  parse.rs  prompt.rs  provider.rs  repo.rs  route.rs  service.rs
apps/api/src/ai/agents/: classifier.rs  error.rs  knowledge.rs  mod.rs  template.rs
apps/api/src/analysis/: datafusion_ctx.rs  mod.rs  route.rs  service.rs
apps/api/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  repo.rs  route.rs  service.rs
apps/api/src/db/: mod.rs
apps/api/src/entity/: ai_analysis.rs  knowledge.rs  knowledge_tag.rs  mod.rs  prelude.rs  problem.rs  problem_tag.rs  submission.rs  tag.rs  task.rs  template.rs  template_problem.rs  template_tag.rs  user.rs
apps/api/src/import/: model.rs  route.rs  service.rs
apps/api/src/knowledge/: model.rs  repo.rs  route.rs  service.rs
apps/api/src/problem/: model.rs  repo.rs  route.rs  service.rs
apps/api/src/submission/: model.rs  repo.rs  route.rs  service.rs
apps/api/src/tag/: mod.rs  model.rs  repo.rs  route.rs  service.rs
apps/api/src/task/: mod.rs  model.rs  repo.rs  route.rs
apps/api/src/template/: model.rs  repo.rs  route.rs  service.rs
apps/api/tests/: api_helpers.rs  auth.rs  datafusion_ctx.rs
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
browser-extension/: .gitignore  README.md  background.js  build.mjs  content.css  content.js  manifest.base.json  manifest.json  package.json  popup.css  popup.html  popup.js  vjudge-scraper.js
browser-extension-firefox/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  token-reader.js  vjudge-scraper.js
browser-extension/content/: codeforces.js
browser-extension/src/: background.js  content.js  protocol.js  scraper-bridge.js  token-reader.js
docs/specs/: 2026-06-07-ai-driven-product-design.md  2026-06-09-ai-analysis-system.md  2026-06-10-ai-analysis-optimization.md  2026-06-10-ai-architecture-v2.md  2026-06-10-template-library-design.md
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.pi-lens/: turn-state.json
src-tauri/.pi-lens/cache/: review-graph.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_settings.sql  003_external_submissions.sql
src-tauri/src/: error.rs  import_server.rs  import_service.rs  lib.rs  vjudge.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  repo.rs
src-tauri/src/storage/: mod.rs
src/components/: ImportToast.tsx
src/hooks/: useVJudgeImportListener.ts  (+1 more)
(+70 files in other folders)
