[package]
name = "acmind-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "acmind-api"
path = "src/main.rs"

[dependencies]
# Web
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.4"

# DB
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置
dotenvy = "0.15"

# 鉴权
jsonwebtoken = "9"
bcrypt = "0.15"

# 错误
thiserror = "1"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 工具
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# 分析
datafusion = "41"
arrow = { version = "53", features = ["csv", "json"] }
